# itmo_mlsd_2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: ml_system_design_doc.md
notebooks/: eda.ipynb
