[tool.poetry]
name = "itmo-mlsd-2024"
version = "0.1.0"
description = "ITMO 2024 ML System Design project"
authors = ["Ринат Шарафетдинов <sharafetdinov42@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
